--- a/css/main.css
+++ b/css/main.css
@@ -833,8 +833,11 @@ body{
     }
 
     .main__info_left-menu-name:first-child::before{
-        content: url(../icons/Flight.svg);
+        /* content: url(../icons/Flight.svg); */
+        content:"";
+        background-image: url(../icons/Flight.svg);
         position: relative;
+        background-size: 100% 100%;
         height: 30px;
         width: 30px;
         margin-right: 10px;
@@ -842,8 +845,11 @@ body{
     }
 
     .main__info_left-menu-name:nth-child(2)::before{
-        content: url(../icons/status.svg) ;
+        /* content: url(../icons/status.svg) ; */
+        content: "";
+        background-image: url(../icons/status.svg);
         position: relative;
+        background-size: 100% 100%;
         height: 30px;
         width: 30px;
         margin-right: 10px;
@@ -851,7 +857,10 @@ body{
     }
 
     .main__info_left-menu-name:nth-child(3)::before{
-        content: url(../icons/3.svg) ;
+        /* content: url(../icons/3.svg) ; */
+        content:"";
+        background-image: url(../icons/3.svg);
+        background-size: 100% 100%;
         position: relative;
         height: 30px;
         width: 30px;
@@ -860,7 +869,10 @@ body{
     }
 
     .main__info_left-menu-name:nth-child(4)::before{
-        content: url(../icons/4.svg) ;
+        /* content: url(../icons/4.svg) ; */
+        content:"";
+        background-image: url(../icons/4.svg);
+        background-size: 100% 100%;
         position: relative;
         height: 30px;
         width: 30px;
@@ -888,6 +900,10 @@ body{
         align-items: center;
     }
 
+    .main__info_reklama{
+        margin-top: 0;
+    }
+
 
 
 }
@@ -899,6 +915,14 @@ body{
         width: 100%;
         height: 50px;
     }   
+
+    .back-img{
+        background-image: url(https://media.united.com/assets/m/3ddfa7955c323b06/original/050522_FOC_100K_HPCARSUL1_960X1035.jpg) ;
+        background-repeat: no-repeat;
+        background-size:cover;
+        display: flex;
+        z-index: 0;
+    }
 
     .main__header{
         width: 100%;
@@ -916,12 +940,12 @@ body{
     }
 
     .main__header_right{
-        width: 146px;
+        width: 125px;
         height: 50px;
     }
 
     .main__header_right-options{
-        width: 146px;
+        width: 125px;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
@@ -932,6 +956,7 @@ body{
         color: black;
         overflow: hidden;
         align-items: center;
+        width: 20px;
     }
 
     .fa-bell{
@@ -955,6 +980,7 @@ body{
         margin-right: 5px;
     
     }
+
     .header__tablet_menu{
         display: none;
     }
@@ -981,17 +1007,18 @@ body{
         height: 300px;
         align-items: center;
     }
+
     .files__text{
         width: 95%;
     }
+
     .files__name{
         width: 95%;
         /* margin-left: auto; */
     }
+
     .files__learn{
         width: 95%;
-    }
-    .files__upr{
     }
 }
 
