--- a/css/main.css
+++ b/css/main.css
@@ -232,6 +232,10 @@ body{
     letter-spacing: 1px;
 }
 
+.firstline__link:hover{
+    color: #024;
+}
+
 .firstline__link:first-child{
     border-bottom: 2px solid #2172ba;
     color: #024;
@@ -818,13 +822,8 @@ body{
     .main__info_left-menu-name{
         width: 100%;
         height: 57px;
-        /* display: none; */
-        
-    }
-
-    .main__info_left-menu-name{
         display: flex;
-        border-bottom:1px solid black ;
+        border-bottom:1px solid #666 ;
         align-items: center;
         flex-direction: row;
         justify-content: flex-start;
