--- a/css/about.css
+++ b/css/about.css
@@ -71,7 +71,7 @@
     font-size: 12px;
     font-family: "Open Sans";
     margin-bottom: 10px;
-
+    width:fit-content;
 }
 
 .about__rows_info-link:hover{
