--- a/css/footer.css
+++ b/css/footer.css
@@ -175,6 +175,10 @@ footer{
         font-family: "Open Sans";
         line-height: 1.4;
     }
+
+    .footer__info{
+        height: auto;
+    }
 }
 
 @media(max-width:415px){
